--- a/src/pages/slot/index.html
+++ b/src/pages/slot/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    <div id="app"></div>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
