--- a/src/pages/scratchPage/scratchPage.html
+++ b/src/pages/scratchPage/scratchPage.html
@@ -12,8 +12,10 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="header"></div>
+    <div id="randomix"></div>
+    <div id="footer"></div>
 
-    <script type="module" src="/src/pages/scratchPage/index.js"></script>
+    <script type="module" src="/src/pages/scratchPage/testFullPage.js"></script>
   </body>
 </html>
