--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="src/styles/global.css" />
-		<title>Home</title>
-	</head>
-	<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles/global.css" />
+    <title>Home</title>
+    <link
+      rel="icon"
+      href="https://santosfabin.github.io/Randomix/src/assets/favicon/logo.svg"
+      type="image/svg"
+    />
+  </head>
+  <body>
+    <div id="app"></div>
 
-		<div id="app">
-		</div>
-
-		<script type="module" src="index.js"></script>
-	</body>
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
