--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles/global.css" />
-    <title>Home</title>
+    <title>Randomix</title>
     <link
       rel="icon"
       href="https://santosfabin.github.io/Randomix/src/assets/favicon/logo.svg"
